# vasthu_knowledge_mcp

./: main.py  pyproject.toml  referenc.md  test.py
rough_work/: learning_and_experimenting.ipynb  temp.ipynb
src/curate_data/: __init__.py  config.yml  curate.py  read_config.py
src/curate_data/agent/: __agent__.py  __init__.py
src/curate_data/pdf_utills/: __init__.py  __pdf_manager__.py  __read_helpers__.py
src/data/: vastu.db
src/vasthu_knowledge_mcp/: __init__.py  server.py
src/vasthu_knowledge_mcp/db/: __init__.py  connection.py  read_operations.py  write_operations.py
src/vasthu_knowledge_mcp/models/: __init__.py  schema.py
src/vasthu_knowledge_mcp/tools/: __init__.py  read_tools.py  write_tools.py
