[project]
name = "vasthu-knowledge-mcp"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langmem>=0.0.30",
    "mcp>=1.27.1",
    "pymupdf>=1.27.2.3",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pyyaml>=6.0.3",
]

